src/App.css
*{
  margin:0;
  padding:0;
  box-sizing:border-box;
}

body{
  background:#060a15;
  color:white;
  font-family:sans-serif;
}

.navbar{
  display:flex;
  justify-content:space-between;
  align-items:center;
  padding:20px 60px;
  background:#1c1c0f;
  box-shadow: 0 2px 10px regba(0,0,0,0.1);
}

.logo h2{
  color:#C89B6D;
  margin-right: 20pxpx;
}

.nav-links{
  font-weight: 600;
  transition: 0.3s ;
  gap:35px;
  display: flex;
  list-style:none;
  text-decoration: none;
}

.nav-links li{
  cursor:pointer;
 
}

.nav-links li:hover{
  color:#6b801a;
}

.nav-links li a{
    text-decoration: none !important;
    font-size: 18px;
    font-weight: 600;
    transition: 0.3s ;
    color:white;
    
}
.nav-links li a:hover{
    background-color: #5C4033;
    color: white;
    transform: scale(1.1);
    border-radius: 999px;
    padding: 10px 20px;

}
.theme-btn{
  background:#C89B6D;
  color:white;
  border:none;
  padding:10px 20px;
  border-radius:30px;
  cursor:pointer;
}
.hero{
    display:flex;
    justify-content:center;
    align-items:center;
    height:80vh;
    text-align:center;
}

.hero h1{
    font-size:60px;
    color:#5C4033;
    line-height: 1.5;
}

.hero h3{
    margin-top:15px;
    color:#C89B6D;
}

.hero p{
    margin-top:20px;
    font-size:20px;
    color:#555;
    width:600px;
    max-width:90%;
}

.hero button{

    padding:15px 35px;
    border:none;
    border-radius:40px;
    background:#5C4033;
    color:white;
    font-size:18px;
    transition:.3s;
}

.hero button:hover{
    margin-top: 40px;
    justify-content: center;
    background:#7A5644;
}
.buttons{
    display: flex;
    gap: 20px;
    justify-content:flex-end;
    margin-top: 30px;
}


.skills{
    padding:100px 70px;
    text-align:center;
}

.skills h2{
    color:#5C4033;
    font-size:40px;
    margin-bottom:40px;
}

.skills-container{
    display:flex;
    justify-content:center;
    flex-wrap:wrap;
    gap:25px;
}

.card{
    background:#D9C3A5;
    color:#5C4033;
    padding:25px 45px;
    border-radius:15px;
    font-size:20px;
    font-weight:bold;
    transition:.3s;
    cursor:pointer;
}

.card:hover{
    transform:translateY(-8px);
    background:#5C4033;
    color:white;
}
.projects{
    padding:100px 70px;
    text-align:center;
}

.projects h2{
    color:white;
    font-size:40px;
    margin-bottom:40px;
}

.projects-container{
    display:flex;
    justify-content:center;
    gap:35px;
   
}

.project-card{
    width:350px;
    background:white;
    padding:30px;
    border-radius:20px;
    box-shadow:0 10px 30px rgba(0,0,0,.08);
    transition:all 0.3s ease;

}

.project-card:hover{
    transform:translateY(-10px);
    box-shadow: 0 10px 25px rgba(0,0,0,0.2);
}

.project-card h3{
    color:#5C4033;
}

.project-card p{
    margin:20px 0;
    color:#666;
}

.project-card button{
    padding:12px 30px;
    border:none;
    border-radius:30px;
    background:#5C4033;
    color:white;
    cursor:pointer;
}
contact {
  padding: 100px 20px;
  text-align: center;
  transform: translateY(-5px) scale(1.05);
}

.contact h2 {
  font-size: 42px;
  color: #d89a63;
  transform: translateY(-5px) scale(1.05);
   transform: translateX(-10px);
}


.contact p {
  color: #ddd;
  font-size: 20px;
  max-width: 700px;
  margin: 20px auto;
  line-height: 1.8;
}

.contact-icons {
  display: flex;
  justify-content: center;
  gap: 25px;
  margin-top: 35px;
}

.contact-icons a {
  font-size: 34px;
  transition: 0.3s;
}

.contact-icons a:hover {
  transform: scale(1.2);
}

.email {
  color: #EA4335;
}

.telegram {
  color: #229ED9;
}

.whatsapp {
  color: #25D366;
}

.github {
  color: #ffffff;
}

.linkedin {
  color: #0A66C2;
}
.contact-links{
    display:flex;
    justify-content:center;
    gap:20px;
    flex-wrap:wrap;
}

.contact-links a{
    text-decoration:none;
    background:#5C4033;
    color:white;
    padding:15px 30px;
    border-radius:30px;
    transition:0.3s;
}
.contact-icons{
    display: flex;
    justify-content: center;
    gap: 20px;
    margin-top: 30px;
}
.contact-icons a{
    font-size: 32px;
    transition: 1.3s;
}

.contact-links a:hover{
    background:#B07D52;
   
}
.skills{
    padding: 100px 10%;
    text-align: center;
}

.skills-text{
    color: #ddd;
    max-width: 700px;
    margin: 0 auto 40px;
    line-height: 1.8;
}
.skills-image{
    display: flex;
    justify-content: center;
    margin: 35px 0;
}

.skills-image img{
    width: 400px;
    border-radius: 20px;
}

.skills-list{
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 15px;
}


.projects-container{
  display:flex;
  justify-content:center;
  gap:30px;
  flex-wrap:wrap;
}

.project-card{
  width:320px;
  background:#1b1b2f;
  padding:25px;
  border-radius:15px;
  text-align:center;
  transition:.3s;
}

.project-card:hover{
  transform:translateY(-10px);
}

.project-card h3{
  margin-bottom:15px;
}

.project-card p{
  line-height:1.8;
  margin-bottom:20px;
}

.project-card button{
  background:#f4a261;
  border:none;
  padding:12px 25px;
  border-radius:30px;
  cursor:pointer;
  font-size:16px;
}
.footer{
    background:#5C4033;
    color:white;
    text-align:center;
    padding:30px;
}

.footer h3{
    margin-bottom:10px;
    font-size:28px;
}

.footer p{
    color:#ddd;
}
.hero-content{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 70px;
   
}

.hero-text{
    flex: 1;
   
}

.hero-img img:hover{
    transform:scale(1.05);
}

.hero-img{ flex: 1;
 display: flex;
 justify-content: center;
 margin-right: 70px;
 align-items: center;

}


.hero-img img{
    width: 320px;
    height: 360px;
    border-radius: 0 25px 0 25px;
    object-fit: cover;
    border: 5px solid #F5C403;
    display: flex;
    box-shadow: 0 10px 25px rgba(0,0,0,0.2);
    border: 5px solid #5C4033;
    margin-top: 40px;
    transition: all 4s ease;
    margin-left: 150px;

}

/* Skills */

.skills{
    padding: 100px 10%;
    text-align: center;
}

.skills h2{
    font-size: 45px;
    color: #C89B6D;
    margin-bottom: 40px;
}

.skills-text{
    max-width: 800px;
    margin: auto;
}

.skills-text p{
    color: #ddd;
    font-size: 20px;
    line-height: 2;
    margin-bottom: 18px;
    text-align: right;
    transition: 0.3s;
}

.skills-text p:hover{
    color: #C89B6D;
    transform: translateX(-10px);
}

.skills-text strong{
    color: #C89B6D;
    margin-right: 40px;
}
.about{
    opacity: 0;
    transform: translateY(80px);
    animation: fadeUp 1s ease forwards;
    animation-timeline: view();
    animation-range: entry 20% cover 40%;
}

@keyframes fadeUp{
    from{
        opacity:0;
        transform:translateY(80px);
    }

    to{
        opacity:1;
        transform:translateY(0);
    }
}
.about{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 70px;
    padding: 100px 10%;
    flex-wrap: wrap;
}

.about-image img{
    width: 350px;
    border-radius: 20px;
    border: 3px solid #d89a63;
}

.about-content{
    max-width: 500px;
    text-align: right;
}

.about-content h2{
    color: #d89a63;
    font-size: 45px;
    margin-bottom: 20px;
}

.about-content p{
    color: #fff;
    line-height: 2;
    font-size: 18px;
}

.about-info{
    margin-top: 20px;
}

.about-info p{
    margin: 12px 0;
}
.buttons{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    margin-top: 30px;
}
@media (max-width: 768px) {
    .hero{
    flex-direction: column;
    text-align: center;
}
.hero-img img{
    width: 280px;
}

}
@media (max-width: 768px){

    .hero-content{
        flex-direction: column;
        text-align: center;
        gap: 30px;
    }

    .hero-img{
        order: 2;
    }

    .hero-text{
        order: 1;
    }

    .hero-img img{
        width: 250px;
        height: 280px;
    }

    .buttons{
        flex-direction: column;
        align-items: center;
    }
}
   .dark {
  background-color: #0b0b0b;
  color: white;
  min-height: 100vh;
}

.light {
  background-color: white;
  color: #111;
  min-height: 100vh;
}

.theme-btn {
  background: #c58b63;
  color: white;
  border: none;
  padding: 10px 20px;
  border-radius: 25px;
  cursor: pointer;
  font-size: 16px;
}

